// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed state 1`] = `
.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c8 a {
  color: #FFFFFF;
}

.c6 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 40px;
}

.c20 {
  box-sizing: border-box;
  margin-top: 48px;
}

.c19 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 50px;
}

.c19:active {
  opacity: 0.56;
}

.c19:hover,
.c19:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c19:active {
  opacity: 0.24;
}

.c19:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
}

.c24:active {
  opacity: 0.56;
}

.c24:hover,
.c24:focus {
  background: #651FFF;
}

.c24:active {
  background: #354AA4;
}

.c24:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 25px;
}

.c11 {
  display: inline-block;
  transition: color 0.3s;
  padding: 8px;
  color: #FFFFFF;
  font-size: 13px;
}

.c21 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-left: 24px;
  margin-right: 24px;
}

.c18 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-size: 11px;
  margin: 0px;
  margin-right: 8px;
  font-weight: 500;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  height: 34px;
  width: 260px;
  border-bottom: 1px solid;
  border-color: #1C254D;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c9 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c9 > thead > tr > th,
.c9 > tbody > tr > th,
.c9 > tfoot > tr > th,
.c9 > thead > tr > td,
.c9 > tbody > tr > td,
.c9 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c9 > thead > tr > th:first-child,
.c9 > tbody > tr > th:first-child,
.c9 > tfoot > tr > th:first-child,
.c9 > thead > tr > td:first-child,
.c9 > tbody > tr > td:first-child,
.c9 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c9 > thead > tr > th:last-child,
.c9 > tbody > tr > th:last-child,
.c9 > tfoot > tr > th:last-child,
.c9 > thead > tr > td:last-child,
.c9 > tbody > tr > td:last-child,
.c9 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c9 > tbody > tr > td {
  vertical-align: middle;
}

.c9 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c9 > thead > tr > th .c4 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c9 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c9 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c9 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c14 {
  box-sizing: border-box;
  width: 260px;
  height: 150px;
  background-color: #ffffff;
  color: #000000;
  border-radius: 3px;
  position: absolute;
  z-index: 1;
  top: 40px;
}

.c14 .react-select__group,
.c14 .react-select__group-heading,
.c14 .react-select__menu-list {
  padding: 0;
  margin: 0;
}

.c14 .react-select__menu-list {
  margin-top: 10px;
}

.c14 .react-select__option--is-focused {
  background-color: inherit;
}

.c14 .react-select__option--is-focused:hover {
  background-color: #deebff;
}

.c14 .react-select-container {
  width: 300px;
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 16px;
  outline: none;
  width: 100%;
  background-color: #ffffff;
  margin-top: 16px;
  border-radius: 4px;
}

.c14 .react-select__menu {
  box-shadow: none;
}

.c14 .react-select__control {
  border-radius: 30px;
  background-color: #f0f2f4;
  margin: 0px 16px 10px 16px;
}

.c14 .react-select__control:hover {
  cursor: pointer;
}

.c14 .react-select__control--is-focused {
  border-color: transparent;
  box-shadow: none;
}

.c14 .react-select__placeholder {
  font-size: 14px;
}

.c14 .react-select__option {
  white-space: nowrap;
  padding: 9px 16px;
  border-top: 1px solid #eaeaea;
  font-weight: bold;
  font-size: 14px;
}

.c14 .react-select__option:hover {
  cursor: pointer;
}

.c14 .react-select__option:hover:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c14 .react-select__option .icon-checkmark-circle {
  color: transparent;
  margin-right: 10px;
}

.c14 .react-select__option--is-selected {
  background-color: inherit;
  color: inherit;
}

.c14 .react-select__indicators {
  display: none;
}

.c14 .react-select__selected .icon-checkmark-circle {
  color: #00bfa5;
}

.c14 .react-select__selected .icon-cross {
  color: #010B1C;
  display: none;
}

.c14 .react-select__selected:hover .icon-cross {
  display: block;
}

.c15 {
  box-sizing: border-box;
  width: 100%;
  background-color: #efefef;
  color: #324148;
  text-transform: none;
  padding: 3px 15px;
}

.c2 {
  box-sizing: border-box;
  position: absolute;
  z-index: 11;
  top: 0px;
  right: 0px;
  background: #111B48;
  min-height: 100%;
  width: 500px;
  padding: 20px;
}

.c2.entering {
  right: -500px;
}

.c2.entered {
  right: 0px;
  transition: right 300ms ease-out;
}

.c2.exiting {
  right: -500px;
  transition: right 300ms ease-out;
}

.c2.exited {
  right: -500px;
}

.c1 {
  box-sizing: border-box;
  background: #000;
  opacity: 0.5;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
}

.c10 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  position: absolute;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  overflow: hidden;
}

.c12 {
  cursor: pointer;
  background-color: #2e3860;
  border-radius: 2px;
}

.c12:hover {
  background-color: #414b70;
}

.c23 {
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  position: sticky;
  bottom: 0;
  background: #111B48;
}

.c22 {
  box-sizing: border-box;
  padding: 8px;
  height: 80px;
  width: 100%;
  color: rgba(255,255,255,0.87);
  border: 1px solid;
  border-radius: 4px;
  border-color: #222C59;
  background: #1C254D;
}

.c22::placeholder {
  color: rgba(255,255,255,0.56);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 entered"
    />
    <div
      class="c2 entered"
    >
      <div
        class="c3"
      >
        <span
          class="c4 c5 icon icon-arrow_back "
          color="light"
          font-size="25"
          style="cursor: pointer;"
        />
        <div
          class="c6"
        >
          <div
            class="c7"
            color="light"
          >
            4
             
            Resources
             Selected
          </div>
        </div>
      </div>
      <div
        class="c8"
        kind="danger"
      >
        some error message
      </div>
      <table
        class="c9 c10"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            >
              Resource Kind
            </th>
            <th
              style="cursor: default;"
            >
              Resource Name
            </th>
            <th
              style="cursor: default;"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              app
            </td>
            <td>
              app-name
            </td>
            <td
              align="right"
            >
              <span
                class="c4 c11 icon icon-trash2 c12"
                color="light"
                font-size="13"
              />
            </td>
          </tr>
          <tr>
            <td>
              db
            </td>
            <td>
              db-name
            </td>
            <td
              align="right"
            >
              <span
                class="c4 c11 icon icon-trash2 c12"
                color="light"
                font-size="13"
              />
            </td>
          </tr>
          <tr>
            <td>
              kube_cluster
            </td>
            <td>
              kube-name
            </td>
            <td
              align="right"
            >
              <span
                class="c4 c11 icon icon-trash2 c12"
                color="light"
                font-size="13"
              />
            </td>
          </tr>
          <tr>
            <td>
              windows_desktop
            </td>
            <td>
              desktop-name
            </td>
            <td
              align="right"
            >
              <span
                class="c4 c11 icon icon-trash2 c12"
                color="light"
                font-size="13"
              />
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="c13"
      >
        <div
          class="c6"
          style="position: relative;"
        >
          <div
            class="c14"
            style="display: none;"
          >
            <div
              class="react-select-container css-2b097c-container"
            >
              <div
                class="react-select__control react-select__control--menu-is-open css-yk16xz-control"
              >
                <div
                  class="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
                >
                  <div
                    class="react-select__placeholder css-1wa3eu0-placeholder"
                  >
                    Type or select a name
                  </div>
                  <div
                    class="css-b8ldur-Input"
                  >
                    <div
                      class="react-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-3-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="react-select__menu css-26l3qy-menu"
              >
                <div
                  class="react-select__menu-list react-select__menu-list--is-multi css-4ljt47-MenuList"
                >
                  <div
                    class="react-select__group css-syji7d-Group"
                  >
                    <div
                      class="react-select__group-heading css-18ng2q5-group"
                      data="[object Object]"
                      id="react-select-3-group-1-heading"
                    >
                      <div
                        class="c15"
                      >
                        Suggested Reviewers
                      </div>
                    </div>
                    <div>
                      <div
                        class="react-select__option css-yt9ioa-option"
                        id="react-select-3-option-1-0"
                        tabindex="-1"
                      >
                        <div
                          class="c16"
                          title="bob"
                        >
                          bob
                        </div>
                      </div>
                      <div
                        class="react-select__option css-yt9ioa-option"
                        id="react-select-3-option-1-1"
                        tabindex="-1"
                      >
                        <div
                          class="c16"
                          title="cat"
                        >
                          cat
                        </div>
                      </div>
                      <div
                        class="react-select__option css-yt9ioa-option"
                        id="react-select-3-option-1-2"
                        tabindex="-1"
                      >
                        <div
                          class="c16"
                          title="george washington"
                        >
                          george washington
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c17"
            height="34px"
            width="260px"
          >
            <div
              class="c18"
              font-size="11px"
              font-weight="500"
            >
              Reviewers (optional)
            </div>
            <button
              class="c19"
              kind="border"
              width="50px"
            >
              Add
            </button>
          </div>
        </div>
      </div>
      <div
        class="c20"
      >
        <label
          class="c21"
          font-size="0"
        >
          Request Reason
        </label>
        <textarea
          class="c22"
          color="text.primary"
          height="80px"
          placeholder="Describe your request... (optional)"
          style="outline: none;"
          width="100%"
        />
      </div>
      <div
        class="c23"
      >
        <button
          class="c24"
          kind="primary"
          width="100%"
        >
          Submit Request
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c6 {
  box-sizing: border-box;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 40px;
}

.c19 {
  box-sizing: border-box;
  margin-top: 48px;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 50px;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c18:active {
  opacity: 0.24;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  width: 100%;
}

.c23:active {
  opacity: 0.56;
}

.c23:hover,
.c23:focus {
  background: #651FFF;
}

.c23:active {
  background: #354AA4;
}

.c23:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c5 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 25px;
}

.c10 {
  display: inline-block;
  transition: color 0.3s;
  padding: 8px;
  color: #FFFFFF;
  font-size: 13px;
}

.c20 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-left: 24px;
  margin-right: 24px;
}

.c17 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-size: 11px;
  margin: 0px;
  margin-right: 8px;
  font-weight: 500;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c16 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  height: 34px;
  width: 260px;
  border-bottom: 1px solid;
  border-color: #1C254D;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c8 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c8 > thead > tr > th,
.c8 > tbody > tr > th,
.c8 > tfoot > tr > th,
.c8 > thead > tr > td,
.c8 > tbody > tr > td,
.c8 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c8 > thead > tr > th:first-child,
.c8 > tbody > tr > th:first-child,
.c8 > tfoot > tr > th:first-child,
.c8 > thead > tr > td:first-child,
.c8 > tbody > tr > td:first-child,
.c8 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c8 > thead > tr > th:last-child,
.c8 > tbody > tr > th:last-child,
.c8 > tfoot > tr > th:last-child,
.c8 > thead > tr > td:last-child,
.c8 > tbody > tr > td:last-child,
.c8 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c8 > tbody > tr > td {
  vertical-align: middle;
}

.c8 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c8 > thead > tr > th .c4 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c8 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c8 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c8 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c13 {
  box-sizing: border-box;
  width: 260px;
  height: 150px;
  background-color: #ffffff;
  color: #000000;
  border-radius: 3px;
  position: absolute;
  z-index: 1;
  top: 40px;
}

.c13 .react-select__group,
.c13 .react-select__group-heading,
.c13 .react-select__menu-list {
  padding: 0;
  margin: 0;
}

.c13 .react-select__menu-list {
  margin-top: 10px;
}

.c13 .react-select__option--is-focused {
  background-color: inherit;
}

.c13 .react-select__option--is-focused:hover {
  background-color: #deebff;
}

.c13 .react-select-container {
  width: 300px;
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 16px;
  outline: none;
  width: 100%;
  background-color: #ffffff;
  margin-top: 16px;
  border-radius: 4px;
}

.c13 .react-select__menu {
  box-shadow: none;
}

.c13 .react-select__control {
  border-radius: 30px;
  background-color: #f0f2f4;
  margin: 0px 16px 10px 16px;
}

.c13 .react-select__control:hover {
  cursor: pointer;
}

.c13 .react-select__control--is-focused {
  border-color: transparent;
  box-shadow: none;
}

.c13 .react-select__placeholder {
  font-size: 14px;
}

.c13 .react-select__option {
  white-space: nowrap;
  padding: 9px 16px;
  border-top: 1px solid #eaeaea;
  font-weight: bold;
  font-size: 14px;
}

.c13 .react-select__option:hover {
  cursor: pointer;
}

.c13 .react-select__option:hover:last-child {
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 3px;
}

.c13 .react-select__option .icon-checkmark-circle {
  color: transparent;
  margin-right: 10px;
}

.c13 .react-select__option--is-selected {
  background-color: inherit;
  color: inherit;
}

.c13 .react-select__indicators {
  display: none;
}

.c13 .react-select__selected .icon-checkmark-circle {
  color: #00bfa5;
}

.c13 .react-select__selected .icon-cross {
  color: #010B1C;
  display: none;
}

.c13 .react-select__selected:hover .icon-cross {
  display: block;
}

.c14 {
  box-sizing: border-box;
  width: 100%;
  background-color: #efefef;
  color: #324148;
  text-transform: none;
  padding: 3px 15px;
}

.c2 {
  box-sizing: border-box;
  position: absolute;
  z-index: 11;
  top: 0px;
  right: 0px;
  background: #111B48;
  min-height: 100%;
  width: 500px;
  padding: 20px;
}

.c2.entering {
  right: -500px;
}

.c2.entered {
  right: 0px;
  transition: right 300ms ease-out;
}

.c2.exiting {
  right: -500px;
  transition: right 300ms ease-out;
}

.c2.exited {
  right: -500px;
}

.c1 {
  box-sizing: border-box;
  background: #000;
  opacity: 0.5;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
}

.c9 > tbody > tr > td {
  vertical-align: middle;
}

.c0 {
  position: absolute;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  overflow: hidden;
}

.c11 {
  cursor: pointer;
  background-color: #2e3860;
  border-radius: 2px;
}

.c11:hover {
  background-color: #414b70;
}

.c22 {
  box-sizing: border-box;
  padding-top: 24px;
  padding-bottom: 24px;
  position: sticky;
  bottom: 0;
  background: #111B48;
}

.c21 {
  box-sizing: border-box;
  padding: 8px;
  height: 80px;
  width: 100%;
  color: rgba(255,255,255,0.87);
  border: 1px solid;
  border-radius: 4px;
  border-color: #222C59;
  background: #1C254D;
}

.c21::placeholder {
  color: rgba(255,255,255,0.56);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 entered"
    />
    <div
      class="c2 entered"
    >
      <div
        class="c3"
      >
        <span
          class="c4 c5 icon icon-arrow_back "
          color="light"
          font-size="25"
          style="cursor: pointer;"
        />
        <div
          class="c6"
        >
          <div
            class="c7"
            color="light"
          >
            4
             
            Resources
             Selected
          </div>
        </div>
      </div>
      <table
        class="c8 c9"
      >
        <thead>
          <tr>
            <th
              style="cursor: default;"
            >
              Resource Kind
            </th>
            <th
              style="cursor: default;"
            >
              Resource Name
            </th>
            <th
              style="cursor: default;"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              app
            </td>
            <td>
              app-name
            </td>
            <td
              align="right"
            >
              <span
                class="c4 c10 icon icon-trash2 c11"
                color="light"
                font-size="13"
              />
            </td>
          </tr>
          <tr>
            <td>
              db
            </td>
            <td>
              db-name
            </td>
            <td
              align="right"
            >
              <span
                class="c4 c10 icon icon-trash2 c11"
                color="light"
                font-size="13"
              />
            </td>
          </tr>
          <tr>
            <td>
              kube_cluster
            </td>
            <td>
              kube-name
            </td>
            <td
              align="right"
            >
              <span
                class="c4 c10 icon icon-trash2 c11"
                color="light"
                font-size="13"
              />
            </td>
          </tr>
          <tr>
            <td>
              windows_desktop
            </td>
            <td>
              desktop-name
            </td>
            <td
              align="right"
            >
              <span
                class="c4 c10 icon icon-trash2 c11"
                color="light"
                font-size="13"
              />
            </td>
          </tr>
        </tbody>
      </table>
      <div
        class="c12"
      >
        <div
          class="c6"
          style="position: relative;"
        >
          <div
            class="c13"
            style="display: none;"
          >
            <div
              class="react-select-container css-2b097c-container"
            >
              <div
                class="react-select__control react-select__control--menu-is-open css-yk16xz-control"
              >
                <div
                  class="react-select__value-container react-select__value-container--is-multi css-g1d714-ValueContainer"
                >
                  <div
                    class="react-select__placeholder css-1wa3eu0-placeholder"
                  >
                    Type or select a name
                  </div>
                  <div
                    class="css-b8ldur-Input"
                  >
                    <div
                      class="react-select__input"
                      style="display: inline-block;"
                    >
                      <input
                        aria-autocomplete="list"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        id="react-select-2-input"
                        spellcheck="false"
                        style="box-sizing: content-box; width: 2px; border: 0px; opacity: 1; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: Ubuntu2,-apple-system,BlinkMacSystemFont,\\"Segoe UI\\",Helvetica,Arial,sans-serif,\\"Apple Color Emoji\\",\\"Segoe UI Emoji\\",\\"Segoe UI Symbol\\"; letter-spacing: normal; text-transform: none;"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6q0nyr-Svg"
                      focusable="false"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <div
                class="react-select__menu css-26l3qy-menu"
              >
                <div
                  class="react-select__menu-list react-select__menu-list--is-multi css-4ljt47-MenuList"
                >
                  <div
                    class="react-select__group css-syji7d-Group"
                  >
                    <div
                      class="react-select__group-heading css-18ng2q5-group"
                      data="[object Object]"
                      id="react-select-2-group-1-heading"
                    >
                      <div
                        class="c14"
                      >
                        Suggested Reviewers
                      </div>
                    </div>
                    <div>
                      <div
                        class="react-select__option css-yt9ioa-option"
                        id="react-select-2-option-1-0"
                        tabindex="-1"
                      >
                        <div
                          class="c15"
                          title="bob"
                        >
                          bob
                        </div>
                      </div>
                      <div
                        class="react-select__option css-yt9ioa-option"
                        id="react-select-2-option-1-1"
                        tabindex="-1"
                      >
                        <div
                          class="c15"
                          title="cat"
                        >
                          cat
                        </div>
                      </div>
                      <div
                        class="react-select__option css-yt9ioa-option"
                        id="react-select-2-option-1-2"
                        tabindex="-1"
                      >
                        <div
                          class="c15"
                          title="george washington"
                        >
                          george washington
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c16"
            height="34px"
            width="260px"
          >
            <div
              class="c17"
              font-size="11px"
              font-weight="500"
            >
              Reviewers (optional)
            </div>
            <button
              class="c18"
              kind="border"
              width="50px"
            >
              Add
            </button>
          </div>
        </div>
      </div>
      <div
        class="c19"
      >
        <label
          class="c20"
          font-size="0"
        >
          Request Reason
        </label>
        <textarea
          class="c21"
          color="text.primary"
          height="80px"
          placeholder="Describe your request..."
          style="outline: none;"
          width="100%"
        />
      </div>
      <div
        class="c22"
      >
        <button
          class="c23"
          kind="primary"
          width="100%"
        >
          Submit Request
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`success state 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 48px;
  margin-top: 8px;
  text-align: center;
}

.c9 {
  box-sizing: border-box;
  text-align: center;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-bottom: 16px;
  margin-top: 32px;
  width: 100%;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: none;
  text-decoration: underline;
}

.c11:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c8 {
  display: block;
  outline: none;
  width: 250px;
  height: 179px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  color: rgba(255,255,255,0.56);
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  justify-content: center;
}

.c2 {
  box-sizing: border-box;
  position: absolute;
  z-index: 11;
  top: 0px;
  right: 0px;
  background: #111B48;
  min-height: 100%;
  width: 500px;
  padding: 20px;
}

.c2.entering {
  right: -500px;
}

.c2.entered {
  right: 0px;
  transition: right 300ms ease-out;
}

.c2.exiting {
  right: -500px;
  transition: right 300ms ease-out;
}

.c2.exited {
  right: -500px;
}

.c1 {
  box-sizing: border-box;
  background: #000;
  opacity: 0.5;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
}

.c0 {
  position: absolute;
  width: 100vw;
  height: 100vh;
  top: 0;
  left: 0;
  overflow: hidden;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 entered"
    />
    <div
      class="c2 entered"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
            color="light"
          >
            Resources Requested Successfully
          </div>
          <div
            class="c6"
            color="text.secondary"
          >
            You've successfully requested 
            4
             
            resources
          </div>
        </div>
        <div
          class="c7"
        >
          <img
            class="c8"
            height="179px"
            src="file_stub"
            width="250px"
          />
        </div>
      </div>
      <div
        class="c9"
      >
        <a
          class="c10"
          href="/web/requests"
          kind="primary"
          mb="3"
          mt="5"
          theme="[object Object]"
          width="100%"
        >
          Back to Listings
        </a>
        <button
          class="c11"
          kind="text"
        >
          Make Another Request
        </button>
      </div>
    </div>
  </div>
</div>
`;
